[package]
name = "gctree"
version = "0.22.0"
edition = "2021"
description = "A library for cache-friendly, graph-like, arena-allocated datastructures."
license = "MIT"
documentation = "https://docs.rs/gctree"
repository = "https://github.com/jjpe/gctree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltoid = "0.12.0"
deltoid-derive = "0.12.0"
derive_more = "0.99.17"
displaydoc = "0.2.3"
dot-generator = { version = "0.2.0", optional = true }
dot-structures = { version = "0.1.0", optional = true }
graphviz-rust = { version = "0.6.2", optional = true }
ioe = "0.5.2"
itertools = "0.11.0"
serde = "1.0.137"
serde_derive = "1.0.137"
thiserror = "1.0.31"

[features]
graphviz = ["graphviz-rust", "dot-generator", "dot-structures"]
