[package]
name = "gctree"
version = "0.33.0"
edition = "2021" # TODO: update to edition 2024
description = "A library for cache-friendly, graph-like, arena-allocated datastructures."
license = "MIT"
documentation = "https://docs.rs/gctree"
repository = "https://github.com/jjpe/gctree"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
displaydoc = "0.2.5"
dot-generator = { version = "0.2.0", optional = true }
dot-structures = { version = "0.1.2", optional = true }
graphviz-rust = { version = "0.9.4", optional = true }
ioe = "0.6.0"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[features]
graphviz = ["graphviz-rust", "dot-generator", "dot-structures"]
